// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildExportCode > kind chakra2 > renders format hex identically 1`] = `
"import { extendTheme } from '@chakra-ui/react';

const theme = extendTheme({
  colors: {
    brand: {
      50: '#EBF8FF',
      100: '#BEE3F8',
      200: '#90CDF4',
      300: '#63B3ED',
      400: '#4299E1',
      500: '#3182CE',
      600: '#2B6CB0',
      700: '#2C5282',
      800: '#2A4365',
      900: '#1A365D',
    }
  }
});

export default theme;"
`;

exports[`buildExportCode > kind chakra2 > renders format hsl identically 1`] = `
"import { extendTheme } from '@chakra-ui/react';

const theme = extendTheme({
  colors: {
    brand: {
      50: 'hsl(201 100% 96%)',
      100: 'hsl(202 81% 86%)',
      200: 'hsl(203 82% 76%)',
      300: 'hsl(205 79% 66%)',
      400: 'hsl(207 73% 57%)',
      500: 'hsl(209 62% 50%)',
      600: 'hsl(211 61% 43%)',
      700: 'hsl(213 49% 34%)',
      800: 'hsl(215 41% 28%)',
      900: 'hsl(215 56% 23%)',
    }
  }
});

export default theme;"
`;

exports[`buildExportCode > kind chakra2 > renders format oklch identically 1`] = `
"import { extendTheme } from '@chakra-ui/react';

const theme = extendTheme({
  colors: {
    brand: {
      50: 'oklch(0.971 0.0167 230.9)',
      100: 'oklch(0.896 0.0484 232.9)',
      200: 'oklch(0.821 0.0833 237.2)',
      300: 'oklch(0.739 0.1154 242.1)',
      400: 'oklch(0.663 0.1358 246.8)',
      500: 'oklch(0.595 0.1398 250.3)',
      600: 'oklch(0.524 0.1259 252.3)',
      700: 'oklch(0.435 0.091 255.2)',
      800: 'oklch(0.379 0.0663 256.4)',
      900: 'oklch(0.333 0.0772 257.1)',
    }
  }
});

export default theme;"
`;

exports[`buildExportCode > kind chakra2 > renders format rgb identically 1`] = `
"import { extendTheme } from '@chakra-ui/react';

const theme = extendTheme({
  colors: {
    brand: {
      50: 'rgb(235, 248, 255)',
      100: 'rgb(190, 227, 248)',
      200: 'rgb(144, 205, 244)',
      300: 'rgb(99, 179, 237)',
      400: 'rgb(66, 153, 225)',
      500: 'rgb(49, 130, 206)',
      600: 'rgb(43, 108, 176)',
      700: 'rgb(44, 82, 130)',
      800: 'rgb(42, 67, 101)',
      900: 'rgb(26, 54, 93)',
    }
  }
});

export default theme;"
`;

exports[`buildExportCode > kind chakra3 > renders format hex identically 1`] = `
"import { defineStyleConfig, extendTheme } from '@chakra-ui/react';

const theme = extendTheme({
  tokens: {
    colors: {
      brand: {
      50: '#EBF8FF',
      100: '#BEE3F8',
      200: '#90CDF4',
      300: '#63B3ED',
      400: '#4299E1',
      500: '#3182CE',
      600: '#2B6CB0',
      700: '#2C5282',
      800: '#2A4365',
      900: '#1A365D',
      950: '#102A4C',
      }
    }
  }
});

export default theme;"
`;

exports[`buildExportCode > kind chakra3 > renders format hsl identically 1`] = `
"import { defineStyleConfig, extendTheme } from '@chakra-ui/react';

const theme = extendTheme({
  tokens: {
    colors: {
      brand: {
      50: 'hsl(201 100% 96%)',
      100: 'hsl(202 81% 86%)',
      200: 'hsl(203 82% 76%)',
      300: 'hsl(205 79% 66%)',
      400: 'hsl(207 73% 57%)',
      500: 'hsl(209 62% 50%)',
      600: 'hsl(211 61% 43%)',
      700: 'hsl(213 49% 34%)',
      800: 'hsl(215 41% 28%)',
      900: 'hsl(215 56% 23%)',
      950: 'hsl(214 65% 18%)',
      }
    }
  }
});

export default theme;"
`;

exports[`buildExportCode > kind chakra3 > renders format oklch identically 1`] = `
"import { defineStyleConfig, extendTheme } from '@chakra-ui/react';

const theme = extendTheme({
  tokens: {
    colors: {
      brand: {
      50: 'oklch(0.971 0.0167 230.9)',
      100: 'oklch(0.896 0.0484 232.9)',
      200: 'oklch(0.821 0.0833 237.2)',
      300: 'oklch(0.739 0.1154 242.1)',
      400: 'oklch(0.663 0.1358 246.8)',
      500: 'oklch(0.595 0.1398 250.3)',
      600: 'oklch(0.524 0.1259 252.3)',
      700: 'oklch(0.435 0.091 255.2)',
      800: 'oklch(0.379 0.0663 256.4)',
      900: 'oklch(0.333 0.0772 257.1)',
      950: 'oklch(0.285 0.0703 256.2)',
      }
    }
  }
});

export default theme;"
`;

exports[`buildExportCode > kind chakra3 > renders format rgb identically 1`] = `
"import { defineStyleConfig, extendTheme } from '@chakra-ui/react';

const theme = extendTheme({
  tokens: {
    colors: {
      brand: {
      50: 'rgb(235, 248, 255)',
      100: 'rgb(190, 227, 248)',
      200: 'rgb(144, 205, 244)',
      300: 'rgb(99, 179, 237)',
      400: 'rgb(66, 153, 225)',
      500: 'rgb(49, 130, 206)',
      600: 'rgb(43, 108, 176)',
      700: 'rgb(44, 82, 130)',
      800: 'rgb(42, 67, 101)',
      900: 'rgb(26, 54, 93)',
      950: 'rgb(16, 42, 76)',
      }
    }
  }
});

export default theme;"
`;

exports[`buildExportCode > kind codes > renders format hex identically 1`] = `
"#EBF8FF
#BEE3F8
#90CDF4
#63B3ED
#4299E1
#3182CE
#2B6CB0
#2C5282
#2A4365
#1A365D
#102A4C"
`;

exports[`buildExportCode > kind codes > renders format hsl identically 1`] = `
"hsl(201 100% 96%)
hsl(202 81% 86%)
hsl(203 82% 76%)
hsl(205 79% 66%)
hsl(207 73% 57%)
hsl(209 62% 50%)
hsl(211 61% 43%)
hsl(213 49% 34%)
hsl(215 41% 28%)
hsl(215 56% 23%)
hsl(214 65% 18%)"
`;

exports[`buildExportCode > kind codes > renders format oklch identically 1`] = `
"oklch(0.971 0.0167 230.9)
oklch(0.896 0.0484 232.9)
oklch(0.821 0.0833 237.2)
oklch(0.739 0.1154 242.1)
oklch(0.663 0.1358 246.8)
oklch(0.595 0.1398 250.3)
oklch(0.524 0.1259 252.3)
oklch(0.435 0.091 255.2)
oklch(0.379 0.0663 256.4)
oklch(0.333 0.0772 257.1)
oklch(0.285 0.0703 256.2)"
`;

exports[`buildExportCode > kind codes > renders format rgb identically 1`] = `
"rgb(235, 248, 255)
rgb(190, 227, 248)
rgb(144, 205, 244)
rgb(99, 179, 237)
rgb(66, 153, 225)
rgb(49, 130, 206)
rgb(43, 108, 176)
rgb(44, 82, 130)
rgb(42, 67, 101)
rgb(26, 54, 93)
rgb(16, 42, 76)"
`;

exports[`buildExportCode > kind cssvars > renders format hex identically 1`] = `
"/* globals.css */
:root {
  --brand-50: #EBF8FF;
  --brand-100: #BEE3F8;
  --brand-200: #90CDF4;
  --brand-300: #63B3ED;
  --brand-400: #4299E1;
  --brand-500: #3182CE;
  --brand-600: #2B6CB0;
  --brand-700: #2C5282;
  --brand-800: #2A4365;
  --brand-900: #1A365D;
  --brand-950: #102A4C;
}

/* Usage example */
.btn-brand {
  background-color: var(--brand-500);
  color: white;
}

.btn-brand:hover {
  background-color: var(--brand-600);
}"
`;

exports[`buildExportCode > kind cssvars > renders format hsl identically 1`] = `
"/* globals.css */
:root {
  --brand-50: hsl(201 100% 96%);
  --brand-100: hsl(202 81% 86%);
  --brand-200: hsl(203 82% 76%);
  --brand-300: hsl(205 79% 66%);
  --brand-400: hsl(207 73% 57%);
  --brand-500: hsl(209 62% 50%);
  --brand-600: hsl(211 61% 43%);
  --brand-700: hsl(213 49% 34%);
  --brand-800: hsl(215 41% 28%);
  --brand-900: hsl(215 56% 23%);
  --brand-950: hsl(214 65% 18%);
}

/* Usage example */
.btn-brand {
  background-color: var(--brand-500);
  color: white;
}

.btn-brand:hover {
  background-color: var(--brand-600);
}"
`;

exports[`buildExportCode > kind cssvars > renders format oklch identically 1`] = `
"/* globals.css */
:root {
  --brand-50: oklch(0.971 0.0167 230.9);
  --brand-100: oklch(0.896 0.0484 232.9);
  --brand-200: oklch(0.821 0.0833 237.2);
  --brand-300: oklch(0.739 0.1154 242.1);
  --brand-400: oklch(0.663 0.1358 246.8);
  --brand-500: oklch(0.595 0.1398 250.3);
  --brand-600: oklch(0.524 0.1259 252.3);
  --brand-700: oklch(0.435 0.091 255.2);
  --brand-800: oklch(0.379 0.0663 256.4);
  --brand-900: oklch(0.333 0.0772 257.1);
  --brand-950: oklch(0.285 0.0703 256.2);
}

/* Usage example */
.btn-brand {
  background-color: var(--brand-500);
  color: white;
}

.btn-brand:hover {
  background-color: var(--brand-600);
}"
`;

exports[`buildExportCode > kind cssvars > renders format rgb identically 1`] = `
"/* globals.css */
:root {
  --brand-50: rgb(235, 248, 255);
  --brand-100: rgb(190, 227, 248);
  --brand-200: rgb(144, 205, 244);
  --brand-300: rgb(99, 179, 237);
  --brand-400: rgb(66, 153, 225);
  --brand-500: rgb(49, 130, 206);
  --brand-600: rgb(43, 108, 176);
  --brand-700: rgb(44, 82, 130);
  --brand-800: rgb(42, 67, 101);
  --brand-900: rgb(26, 54, 93);
  --brand-950: rgb(16, 42, 76);
}

/* Usage example */
.btn-brand {
  background-color: var(--brand-500);
  color: white;
}

.btn-brand:hover {
  background-color: var(--brand-600);
}"
`;

exports[`buildExportCode > kind shadcn > renders format hex identically 1`] = `
"/* globals.css */
:root {
  --background: #EBF8FF;
  --foreground: #102A4C;
  --card: #BEE3F8;
  --card-foreground: #102A4C;
  --popover: #BEE3F8;
  --popover-foreground: #102A4C;
  --primary: #2B6CB0;
  --primary-foreground: #EBF8FF;
  --secondary: #90CDF4;
  --secondary-foreground: #1A365D;
  --muted: #BEE3F8;
  --muted-foreground: #2B6CB0;
  --accent: #90CDF4;
  --accent-foreground: #1A365D;
  --destructive: #6B110C;
  --border: #90CDF4;
  --input: #90CDF4;
  --ring: #2B6CB0;
}

.dark {
  --background: #102A4C;
  --foreground: #EBF8FF;
  --card: #1A365D;
  --card-foreground: #EBF8FF;
  --popover: #1A365D;
  --popover-foreground: #EBF8FF;
  --primary: #4299E1;
  --primary-foreground: #102A4C;
  --secondary: #2C5282;
  --secondary-foreground: #BEE3F8;
  --muted: #2A4365;
  --muted-foreground: #4299E1;
  --accent: #2C5282;
  --accent-foreground: #BEE3F8;
  --destructive: #6B110C;
  --border: #2A4365;
  --input: #2A4365;
  --ring: #4299E1;
}"
`;

exports[`buildExportCode > kind shadcn > renders format hsl identically 1`] = `
"/* globals.css */
:root {
  --background: hsl(201 100% 96%);
  --foreground: hsl(214 65% 18%);
  --card: hsl(202 81% 86%);
  --card-foreground: hsl(214 65% 18%);
  --popover: hsl(202 81% 86%);
  --popover-foreground: hsl(214 65% 18%);
  --primary: hsl(211 61% 43%);
  --primary-foreground: hsl(201 100% 96%);
  --secondary: hsl(203 82% 76%);
  --secondary-foreground: hsl(215 56% 23%);
  --muted: hsl(202 81% 86%);
  --muted-foreground: hsl(211 61% 43%);
  --accent: hsl(203 82% 76%);
  --accent-foreground: hsl(215 56% 23%);
  --destructive: hsl(3 80% 23%);
  --border: hsl(203 82% 76%);
  --input: hsl(203 82% 76%);
  --ring: hsl(211 61% 43%);
}

.dark {
  --background: hsl(214 65% 18%);
  --foreground: hsl(201 100% 96%);
  --card: hsl(215 56% 23%);
  --card-foreground: hsl(201 100% 96%);
  --popover: hsl(215 56% 23%);
  --popover-foreground: hsl(201 100% 96%);
  --primary: hsl(207 73% 57%);
  --primary-foreground: hsl(214 65% 18%);
  --secondary: hsl(213 49% 34%);
  --secondary-foreground: hsl(202 81% 86%);
  --muted: hsl(215 41% 28%);
  --muted-foreground: hsl(207 73% 57%);
  --accent: hsl(213 49% 34%);
  --accent-foreground: hsl(202 81% 86%);
  --destructive: hsl(3 80% 23%);
  --border: hsl(215 41% 28%);
  --input: hsl(215 41% 28%);
  --ring: hsl(207 73% 57%);
}"
`;

exports[`buildExportCode > kind shadcn > renders format oklch identically 1`] = `
"/* globals.css */
:root {
  --background: oklch(0.971 0.0167 230.9);
  --foreground: oklch(0.285 0.0703 256.2);
  --card: oklch(0.896 0.0484 232.9);
  --card-foreground: oklch(0.285 0.0703 256.2);
  --popover: oklch(0.896 0.0484 232.9);
  --popover-foreground: oklch(0.285 0.0703 256.2);
  --primary: oklch(0.524 0.1259 252.3);
  --primary-foreground: oklch(0.971 0.0167 230.9);
  --secondary: oklch(0.821 0.0833 237.2);
  --secondary-foreground: oklch(0.333 0.0772 257.1);
  --muted: oklch(0.896 0.0484 232.9);
  --muted-foreground: oklch(0.524 0.1259 252.3);
  --accent: oklch(0.821 0.0833 237.2);
  --accent-foreground: oklch(0.333 0.0772 257.1);
  --destructive: oklch(0.344 0.1242 28.8);
  --border: oklch(0.821 0.0833 237.2);
  --input: oklch(0.821 0.0833 237.2);
  --ring: oklch(0.524 0.1259 252.3);
}

.dark {
  --background: oklch(0.285 0.0703 256.2);
  --foreground: oklch(0.971 0.0167 230.9);
  --card: oklch(0.333 0.0772 257.1);
  --card-foreground: oklch(0.971 0.0167 230.9);
  --popover: oklch(0.333 0.0772 257.1);
  --popover-foreground: oklch(0.971 0.0167 230.9);
  --primary: oklch(0.663 0.1358 246.8);
  --primary-foreground: oklch(0.285 0.0703 256.2);
  --secondary: oklch(0.435 0.091 255.2);
  --secondary-foreground: oklch(0.896 0.0484 232.9);
  --muted: oklch(0.379 0.0663 256.4);
  --muted-foreground: oklch(0.663 0.1358 246.8);
  --accent: oklch(0.435 0.091 255.2);
  --accent-foreground: oklch(0.896 0.0484 232.9);
  --destructive: oklch(0.344 0.1242 28.8);
  --border: oklch(0.379 0.0663 256.4);
  --input: oklch(0.379 0.0663 256.4);
  --ring: oklch(0.663 0.1358 246.8);
}"
`;

exports[`buildExportCode > kind shadcn > renders format rgb identically 1`] = `
"/* globals.css */
:root {
  --background: rgb(235, 248, 255);
  --foreground: rgb(16, 42, 76);
  --card: rgb(190, 227, 248);
  --card-foreground: rgb(16, 42, 76);
  --popover: rgb(190, 227, 248);
  --popover-foreground: rgb(16, 42, 76);
  --primary: rgb(43, 108, 176);
  --primary-foreground: rgb(235, 248, 255);
  --secondary: rgb(144, 205, 244);
  --secondary-foreground: rgb(26, 54, 93);
  --muted: rgb(190, 227, 248);
  --muted-foreground: rgb(43, 108, 176);
  --accent: rgb(144, 205, 244);
  --accent-foreground: rgb(26, 54, 93);
  --destructive: rgb(107, 17, 12);
  --border: rgb(144, 205, 244);
  --input: rgb(144, 205, 244);
  --ring: rgb(43, 108, 176);
}

.dark {
  --background: rgb(16, 42, 76);
  --foreground: rgb(235, 248, 255);
  --card: rgb(26, 54, 93);
  --card-foreground: rgb(235, 248, 255);
  --popover: rgb(26, 54, 93);
  --popover-foreground: rgb(235, 248, 255);
  --primary: rgb(66, 153, 225);
  --primary-foreground: rgb(16, 42, 76);
  --secondary: rgb(44, 82, 130);
  --secondary-foreground: rgb(190, 227, 248);
  --muted: rgb(42, 67, 101);
  --muted-foreground: rgb(66, 153, 225);
  --accent: rgb(44, 82, 130);
  --accent-foreground: rgb(190, 227, 248);
  --destructive: rgb(107, 17, 12);
  --border: rgb(42, 67, 101);
  --input: rgb(42, 67, 101);
  --ring: rgb(66, 153, 225);
}"
`;

exports[`buildExportCode > kind tw3 > renders format hex identically 1`] = `
"// tailwind.config.ts
import type { Config } from 'tailwindcss';

export default {
  content: ['src/**/*.{ts,tsx}'],
  theme: {
    extend: {
      colors: {
        brand: {
        50: '#EBF8FF',
        100: '#BEE3F8',
        200: '#90CDF4',
        300: '#63B3ED',
        400: '#4299E1',
        500: '#3182CE',
        600: '#2B6CB0',
        700: '#2C5282',
        800: '#2A4365',
        900: '#1A365D',
        950: '#102A4C',
        }
      }
    }
  }
} satisfies Config;"
`;

exports[`buildExportCode > kind tw3 > renders format hsl identically 1`] = `
"// tailwind.config.ts
import type { Config } from 'tailwindcss';

export default {
  content: ['src/**/*.{ts,tsx}'],
  theme: {
    extend: {
      colors: {
        brand: {
        50: 'hsl(201 100% 96%)',
        100: 'hsl(202 81% 86%)',
        200: 'hsl(203 82% 76%)',
        300: 'hsl(205 79% 66%)',
        400: 'hsl(207 73% 57%)',
        500: 'hsl(209 62% 50%)',
        600: 'hsl(211 61% 43%)',
        700: 'hsl(213 49% 34%)',
        800: 'hsl(215 41% 28%)',
        900: 'hsl(215 56% 23%)',
        950: 'hsl(214 65% 18%)',
        }
      }
    }
  }
} satisfies Config;"
`;

exports[`buildExportCode > kind tw3 > renders format oklch identically 1`] = `
"// tailwind.config.ts
import type { Config } from 'tailwindcss';

export default {
  content: ['src/**/*.{ts,tsx}'],
  theme: {
    extend: {
      colors: {
        brand: {
        50: 'oklch(0.971 0.0167 230.9)',
        100: 'oklch(0.896 0.0484 232.9)',
        200: 'oklch(0.821 0.0833 237.2)',
        300: 'oklch(0.739 0.1154 242.1)',
        400: 'oklch(0.663 0.1358 246.8)',
        500: 'oklch(0.595 0.1398 250.3)',
        600: 'oklch(0.524 0.1259 252.3)',
        700: 'oklch(0.435 0.091 255.2)',
        800: 'oklch(0.379 0.0663 256.4)',
        900: 'oklch(0.333 0.0772 257.1)',
        950: 'oklch(0.285 0.0703 256.2)',
        }
      }
    }
  }
} satisfies Config;"
`;

exports[`buildExportCode > kind tw3 > renders format rgb identically 1`] = `
"// tailwind.config.ts
import type { Config } from 'tailwindcss';

export default {
  content: ['src/**/*.{ts,tsx}'],
  theme: {
    extend: {
      colors: {
        brand: {
        50: 'rgb(235, 248, 255)',
        100: 'rgb(190, 227, 248)',
        200: 'rgb(144, 205, 244)',
        300: 'rgb(99, 179, 237)',
        400: 'rgb(66, 153, 225)',
        500: 'rgb(49, 130, 206)',
        600: 'rgb(43, 108, 176)',
        700: 'rgb(44, 82, 130)',
        800: 'rgb(42, 67, 101)',
        900: 'rgb(26, 54, 93)',
        950: 'rgb(16, 42, 76)',
        }
      }
    }
  }
} satisfies Config;"
`;

exports[`buildExportCode > kind tw4 > renders format hex identically 1`] = `
"/* globals.css */
@import "tailwindcss";

@theme {
  --color-brand-50: #EBF8FF;
  --color-brand-100: #BEE3F8;
  --color-brand-200: #90CDF4;
  --color-brand-300: #63B3ED;
  --color-brand-400: #4299E1;
  --color-brand-500: #3182CE;
  --color-brand-600: #2B6CB0;
  --color-brand-700: #2C5282;
  --color-brand-800: #2A4365;
  --color-brand-900: #1A365D;
  --color-brand-950: #102A4C;
}

<!-- Usage example (Tailwind v4) -->
<button class="bg-brand-500 hover:bg-brand-600 text-white">
  Button
</button>

<p class="text-brand-700 border-brand-200">Text and border</p>"
`;

exports[`buildExportCode > kind tw4 > renders format hsl identically 1`] = `
"/* globals.css */
@import "tailwindcss";

@theme {
  --color-brand-50: hsl(201 100% 96%);
  --color-brand-100: hsl(202 81% 86%);
  --color-brand-200: hsl(203 82% 76%);
  --color-brand-300: hsl(205 79% 66%);
  --color-brand-400: hsl(207 73% 57%);
  --color-brand-500: hsl(209 62% 50%);
  --color-brand-600: hsl(211 61% 43%);
  --color-brand-700: hsl(213 49% 34%);
  --color-brand-800: hsl(215 41% 28%);
  --color-brand-900: hsl(215 56% 23%);
  --color-brand-950: hsl(214 65% 18%);
}

<!-- Usage example (Tailwind v4) -->
<button class="bg-brand-500 hover:bg-brand-600 text-white">
  Button
</button>

<p class="text-brand-700 border-brand-200">Text and border</p>"
`;

exports[`buildExportCode > kind tw4 > renders format oklch identically 1`] = `
"/* globals.css */
@import "tailwindcss";

@theme {
  --color-brand-50: oklch(0.971 0.0167 230.9);
  --color-brand-100: oklch(0.896 0.0484 232.9);
  --color-brand-200: oklch(0.821 0.0833 237.2);
  --color-brand-300: oklch(0.739 0.1154 242.1);
  --color-brand-400: oklch(0.663 0.1358 246.8);
  --color-brand-500: oklch(0.595 0.1398 250.3);
  --color-brand-600: oklch(0.524 0.1259 252.3);
  --color-brand-700: oklch(0.435 0.091 255.2);
  --color-brand-800: oklch(0.379 0.0663 256.4);
  --color-brand-900: oklch(0.333 0.0772 257.1);
  --color-brand-950: oklch(0.285 0.0703 256.2);
}

<!-- Usage example (Tailwind v4) -->
<button class="bg-brand-500 hover:bg-brand-600 text-white">
  Button
</button>

<p class="text-brand-700 border-brand-200">Text and border</p>"
`;

exports[`buildExportCode > kind tw4 > renders format rgb identically 1`] = `
"/* globals.css */
@import "tailwindcss";

@theme {
  --color-brand-50: rgb(235, 248, 255);
  --color-brand-100: rgb(190, 227, 248);
  --color-brand-200: rgb(144, 205, 244);
  --color-brand-300: rgb(99, 179, 237);
  --color-brand-400: rgb(66, 153, 225);
  --color-brand-500: rgb(49, 130, 206);
  --color-brand-600: rgb(43, 108, 176);
  --color-brand-700: rgb(44, 82, 130);
  --color-brand-800: rgb(42, 67, 101);
  --color-brand-900: rgb(26, 54, 93);
  --color-brand-950: rgb(16, 42, 76);
}

<!-- Usage example (Tailwind v4) -->
<button class="bg-brand-500 hover:bg-brand-600 text-white">
  Button
</button>

<p class="text-brand-700 border-brand-200">Text and border</p>"
`;
